# XMediaPlayer

./: .gitignore  CMakeLists.txt  Resources.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
